# cuda_learn

./: README.md
0_helloworld/: a.out  main.cu
10_reduceInteger/: CMakeLists.txt  reduceInteger.cu
11_simple_sum_matrix2D/: CMakeLists.txt  simple_sum_matrix.cu
12_reduce_unrolling/: CMakeLists.txt  reduceUnrolling.cu
1_check_dimension/: a.out  check_dimension.cu  learn_dimension.cu
3_sum_arrays/: CMakeLists.txt  sum_arrays.cu
4_sum_arrays_timer/: CMakeLists.txt  sum_arrays_timer.cu
5_thread_index/: CMakeLists.txt  thread_index.cu
6_sum_matrix/: CMakeLists.txt  sum_matrix.cu
7_device_info/: CMakeLists.txt  device_information.cu
8_divergence/: CMakeLists.txt  divergence.cu
compiler/cmake/: CMakeLists.txt  particle.cu  particle.h  randomize.cpp  randomize.h  readme.md  test.cu  test1.cu  test2.c  v3.cu  v3.h
compiler/makefile/: test3.cpp
compiler/nvcc/: foo.cu  foo.cuh  main.cu  main.out
compiler/nvcc_gcc/: makefile  readme.md  test1.cu
include/: freshman.h
